<resources>
    <string name="placeholder"></string>
    <string name="app_name">Fachstudie</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_information">Information</string>
    <string name="nav_item_plot">Plot</string>
    <string name="nav_item_heatmap">Heatmap</string>
    <string name="nav_item_experiment">Experiment</string>


    <string name="not_connected">Connect to device</string>
    <string name="connected">Disconnect from device</string>

    <!-- Navigation drawer item labels  -->
    <!-- Order of navigation  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_information</item>
        <item>@string/nav_item_plot</item>
        <item>@string/nav_item_heatmap</item>
        <item>@string/nav_item_experiment</item>

    </string-array>

    <!-- Title of the views  -->
    <string name="title_home">Home</string>
    <string name="title_information">Information</string>
    <string name="title_plot">Plot</string>
    <string name="title_heatmap">Heatmap</string>
    <string name="title_experiment">Experiment</string>



    <!-- Buttons -->
    <string name="btnNewCSVFile">Create New CSV-File</string>
    <string name="btnCreateMarkInCsv">Create Mark In CSV</string>
    <string name="btnStartExperiment">Start Experiment</string>
    <string name="btnStopExperiment">Stop Experiment</string>
    <string name="btnStartRotation">Start Rotation</string>
    <string name="btnStopRotation">Stop Rotation</string>
    <string name="btnStartPush">Start Push</string>
    <string name="btnStopPush">Stop Push</string>
    <string name="btnStartLiftUp">Start Lift Up</string>
    <string name="btnStopLiftUp">Stop Lift Up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connect">Connect</string>

    <string name="info_first">1. Establish a Bluetooth connection to the (paired) Bluetooth Module of the Arduino Uno.  </string>
    <string name="info_second">2. You can add and remove channels/electrodes in Plot/Heatmap in the menu in the top right corner. </string>
    <string name="info_third">3. There a couple of buttons in the view Experiment. With them you can add different markers into your CSV file.</string>

</resources>
